# praxis

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh.md  RELEASE_NOTES.md  UPSTREAM_FREEZE.txt  package.json  pnpm-lock.yaml
apps/desktop/: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: artifact_file.rs  debug_log.rs  examples.rs  jupyter.rs  kernel.rs  lib.rs  library.rs  main.rs  provider_check.rs  runtime.rs  science_mcp.rs  tools.rs  zotero.rs
apps/desktop/src/app/: router.tsx
apps/desktop/src/lib/: artifactFile.ts  artifacts.test.ts  artifacts.ts  chartPalette.test.ts  citation.test.ts  citation.ts  codingStream.test.ts  codingStream.ts  download.ts  feedback.ts  kernel.ts  library.ts  migratePraxisKeys.ts  notebook-file.ts  notebookOutput.test.tsx  notebookOutput.tsx  plan.test.ts  plan.ts  provenance.test.ts  provenance.ts  providerPresets.test.ts  providerPresets.ts  qcode.test.ts  qcode.ts  (+27 more)
docs/: INSTALL.zh.md
runtime/agents/: README.md
runtime/kernel/: kernel_bridge.py
runtime/manager/: README.md
runtime/plugins/: README.md
runtime/rules/: AGENTS.md
runtime/skills/core/: README.md
scripts/: README.md
scripts/dev/: fetch-python.sh  fetch-ripgrep.sh  fetch-skills.sh
scripts/release/: publish-shell.sh  release.sh  sync-oss.sh
website/: index.html
(+128 files in other folders)
