[package]
name = "fishes"
version = "0.1.3"
description = "Fishes Desktop"
authors = ["Fishes contributors"]
edition = "2021"

[lib]
name = "fishes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
# Self-update (desktop only — this app ships macOS/Windows, never mobile).
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
getrandom = "0.4.3"
opener = "0.8.5"
# Live "does this API key actually work" checks in the setup gate. Already in
# the tree via tauri-plugin-updater, so this adds no new transitive weight.
# system-proxy: LLM endpoints outside China need the user's system proxy.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "system-proxy"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
pdf-extract = "0.12.0"
regex = "1.13.1"
